Updated .gitignore, gave up on Java serial reader